<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="@string/titleNewProblem"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/save_button"
                        app:layout_constraintStart_toEndOf="@id/textView1"
                        app:layout_constraintEnd_toStartOf="@id/get_button"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/save" />

                    <ImageButton
                        android:id="@+id/get_button"
                        android:foreground="@drawable/ic_baseline_arrow_circle_down_24"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:scaleType="fitCenter"
                        android:layout_margin="10dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/download" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/title"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/image"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:background="@color/gray"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_baseline_add_circle_outline_24" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/description"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/difficulty" />

                <EditText
                    android:id="@+id/difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/whiteStarts" />


                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/whiteStarts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/moves" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/moves"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:listitem="@layout/problem_moves_list_item" />

                <Button
                    android:id="@+id/add_move"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_move"
                    android:layout_marginBottom="24dp"
                    />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/whitePositions" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/white_positions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:listitem="@layout/problem_position_list_item" />

                <Button
                    android:id="@+id/add_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_white_position"
                    android:layout_marginBottom="24dp"
                    />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/blackPositions" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/black_positions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    tools:listitem="@layout/problem_position_list_item" />

                <Button
                    android:id="@+id/add_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_black_position"
                    android:layout_marginBottom="24dp"
                    />
            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
